--- a/src/main/resources/templates/menu/index.html
+++ b/src/main/resources/templates/menu/index.html
@@ -8,13 +8,13 @@
 
 <nav th:replace="fragments :: navigation"></nav>
 
-<p th:unless="${categories} and ${categories.size()}">no categories :(</p>
-
-<ul th:each = "category : ${categories}">
-    <li th:text = "${category.name}"></li>
+<ul>
+    <li th:each = "menu : ${menus}">
+        <a th:href = "'menu/view/' + ${menu.id}" th:text="${menu.name}"></a>
+    </li>
 </ul>
 
-<a href="/category/add">Add Category</a>
+<a href="/menu/add">Add Menu</a>
 
 </body>
 </html>
